<!--
  ~ This file is a part of WyrmEngine.
  ~
  ~ This software is provided 'as-is', without any express or implied warranty.
  ~ In no event will the authors be held liable for any damages arising from the use of this software.
  ~
  ~ For terms of use and licensing, please see the End-User License Agreement (EULA).
  -->

<resources>
  <string name="app_name">WyrmEngine</string>
  <string name="projects">Projects</string>
  <string name="new_project">New Project</string>
  <string name="project_name">Project name</string>
  <string name="select_icon">Select Icon</string>
  <string name="icon">Icon</string>
  <string name="cancel">Cancel</string>
  <string name="create">Create</string>
  <string name="empty">Empty</string>

  <string name="eula_title">End-User License Agreement (EULA)</string>
  <string name="eula_content">
    <![CDATA[
     <p>This End-User License Agreement (\"Agreement\") is a legal agreement between you (\"User\") and Vivek Sahani (\"Author\") for the use of WyrmEngine software (\"Software\").</p>

     <p>By downloading, installing, or using the Software, you agree to be bound by the terms of this Agreement. If you do not agree to the terms of this Agreement, do not download, install, or use the Software.</p>

     <h2>1. License Grant</h2>
     <p>The Author grants the User a non-exclusive, non-transferable, limited license to use the Software for personal, educational, or internal business purposes.</p>

     <h2>2. Restrictions</h2>
     <ul>
         <li> <strong>Commercial Use</strong>: The User may not use the Software for commercial purposes without prior written permission from the Author.</li>
         <li> <strong>Modification and Redistribution</strong>: The User may not modify, distribute, or create derivative works of the Software.</li>
         <li> <strong>Ads Integration</strong>: The Author reserves the right to integrate ads within the Software. The User is prohibited from integrating their ads without permission.</li>
         <li> <strong>Reverse Engineering</strong>: The User may not reverse engineer, decompile, or disassemble the Software.</li>
         <li> <strong>Transfer</strong>: The User may not rent, lease, lend, sell, redistribute, or sublicense the Software.</li>
     </ul>

     <h2>3. Intellectual Property</h2>
     <p>The Software, including but not limited to all copyrights, patents, trademarks, and trade secrets, is the exclusive property of the Author. The User does not acquire any ownership rights in the Software.</p>

     <h2>4. Termination</h2>
     <p>The Author may terminate this Agreement at any time if the User fails to comply with any terms of this Agreement. Upon termination, the User must cease all use of the Software and destroy all copies in their possession.</p>

     <h2>5. Disclaimer of Warranties</h2>
     <p>The Software is provided "AS IS" without warranty of any kind. The Author disclaims all warranties, whether express or implied, including, but not limited to, the implied warranties of merchantability, fitness for a particular purpose, and non-infringement.</p>

     <h2>6. Limitation of Liability</h2>
     <p>In no event shall the Author be liable for any special, incidental, indirect, or consequential damages whatsoever arising out of the use of or inability to use the Software.</p>

     <h2>7. Governing Law</h2>
     <p>This Agreement shall be governed by and construed in accordance with the laws of the jurisdiction in which the Author resides, without regard to its conflict of law principles.</p>

     <h2>8. Contact Information</h2>
     <p>For any inquiries or permissions, please contact <a href="mailto:itsvks19@gmail.com">itsvks19@gmail.com</a>.</p>

     <p>Author: Vivek Sahani</p>
     ]]>
  </string>

  <string name="accept">Accept</string>
  <string name="decline">Decline</string>
  <string name="exit">Exit</string>

</resources>