<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.project.NewProjectActivity">

  <TextView
    android:id="@+id/heading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:fontFamily="sans-serif-condensed-light"
    android:text="@string/new_project"
    android:textAppearance="?textAppearanceHeadline4"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/name_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:hint="@string/project_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/heading"
    app:startIconDrawable="@drawable/android">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionGo|flagNoFullscreen|flagNoPersonalizedLearning"
      android:maxLines="1"
      android:singleLine="true"
      android:text="@string/empty" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.chip.Chip
    android:id="@+id/select_icon"
    style="@style/Widget.Material3.Chip.Assist"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/select_icon"
    app:chipIcon="@drawable/add_photo_alternate"
    app:ensureMinTouchTargetSize="true"
    app:layout_constraintBottom_toBottomOf="@id/icon_container"
    app:layout_constraintStart_toEndOf="@id/icon_container"
    app:layout_constraintTop_toTopOf="@id/icon_container" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/icon_container"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/name_layout">

    <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/icon"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="5dp"
      android:scaleType="centerCrop"
      app:shapeAppearance="?shapeAppearanceCornerSmall"
      app:srcCompat="@drawable/ic_launcher_background" />
  </com.google.android.material.card.MaterialCardView>

  <TextView
    android:id="@+id/icon_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/icon"
    android:textAppearance="?textAppearanceLabelSmall"
    android:textColor="?colorOnSurfaceVariant"
    app:layout_constraintEnd_toEndOf="@id/icon_container"
    app:layout_constraintStart_toStartOf="@id/icon_container"
    app:layout_constraintTop_toBottomOf="@id/icon_container" />

  <Button
    android:id="@+id/cancel"
    style="@style/Widget.Material3.Button.ElevatedButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="5dp"
    android:text="@string/cancel"
    app:layout_constraintEnd_toStartOf="@id/create"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/icon_name" />

  <Button
    android:id="@+id/create"
    style="@style/Widget.Material3.Button.OutlinedButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="5dp"
    android:text="@string/create"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/cancel"
    app:layout_constraintTop_toBottomOf="@id/icon_name" />

</androidx.constraintlayout.widget.ConstraintLayout>